# a3grpc

./: HISTORY.md  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  requirements.txt  setup.cfg
a3grpc/: patcher.py  patches.py  type_hints.py
a3grpc/client/: __init__.py  base_client.py
a3grpc/server/: start.py
a3grpc/server/cmds/: __init__.py  run_server.py
a3grpc/server/views/: __init__.py  stream_to_stream_view.py  stream_to_unary_view.py  unary_to_stream_view.py  unary_to_unary_view.py  utils.py  view_utils.py
scripts/: coverage.sh
tests/: client.py  server.py  server_interceptor.py
tests/pb/: hello_world.proto  hello_world_pb2.py  hello_world_pb2_grpc.py
tests/ssl/: ca-key.pem  ca.pem  client-key.pem  client.pem  server-key.pem  server.pem
tests/test_client/: test_base_client.py
tests/test_server/: test_patcher.py  test_start.py  test_view_utils.py
